# brave-core

./: BUILD.gn
android/: brave_java_resources.gni  brave_java_sources.gni
browser/: brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  sources.gni
browser/brave_search/: brave_search_browsertest.cc
browser/brave_shields/: brave_shields_web_contents_observer_browsertest.cc
browser/brave_stats/: brave_stats_updater_browsertest.cc
browser/extensions/api/: brave_rewards_api.cc  brave_rewards_api.h
browser/ipfs/: content_browser_client_helper.cc  content_browser_client_helper_unittest.cc  ipfs_blob_context_getter_factory.cc  ipfs_blob_context_getter_factory.h  ipfs_service_factory.cc  ipfs_tab_helper.cc
browser/ipfs/test/: BUILD.gn  ipfs_service_browsertest.cc  (+1 more)
components/brave_federated/: BUILD.gn  trace_collection_features.cc  trace_collection_features.h  trace_collection_service.cc  trace_collection_service.h
components/common/: typescript.gni
components/definitions/: chromel.d.ts  rewards.d.ts
components/ipfs/: BUILD.gn  blob_context_getter_factory.h  ipfs_onboarding_page.cc  ipfs_p3a.cc  ipfs_service.cc  ipfs_service.h  ipfs_utils.cc
components/resources/: brave_components_strings.grd
patches/: chrome-android-BUILD.gn.patch  chrome-browser-webauthn-chrome_authenticator_request_delegate.cc.patch  chrome-services-qrcode_generator-qrcode_generator_service_impl.cc.patch
renderer/: brave_content_renderer_client.cc
test/: BUILD.gn
(+50 files in other folders)
